# RM26_ArmorFucking

./: .gitignore  AGENTS.md  PNP_README.md  README.md  fuck.sh  imshow_fuck.sh  launch_motor.sh  launch_test.sh  test_aim.sh
readme/: IMPLEMENTATION_GUIDE.md  PROJECT_OVERVIEW.md
src/recive_pkg/: CMakeLists.txt
src/recive_pkg/src/: image_subscirber_node.cpp
src/rm_auto_aim/detection/: CMakeLists.txt  NODE.md  detection  main.cpp  test_aim_node.cpp
src/rm_auto_aim/detection/config/: detect_config.yaml
src/rm_auto_aim/detection/include/: data.hpp  detect.hpp  kalman_detector.hpp  pnp.hpp  traditional_detector.hpp  yolo_detection.hpp
src/rm_auto_aim/detection/src/: detect.cpp  kalman_detector.cpp  pnp.cpp  traditional_detector.cpp  yolo_detection.cpp
src/ros2_hik_camera-main/: CMakeLists.txt
